edit answers and css

--- a/assignment/styles/style.css
+++ b/assignment/styles/style.css
@@ -1,1 +1,10 @@
 /* give your assignment a fun background color */
+body {
+    background-color: peachpuff;
+}
+header {
+    background-color:sandybrown;
+}
+footer {
+    background-color:sandybrown;
+    }
